# controller/commonController/commonController.go
@@ -12,12 +12,10 @@ import (
 // @Accept  application/json
 // @Produce  json
 // @Param tel query string true "手机号码"
-// @Param createtime query string true "创建时间 格式：yyyy-MM-dd HH:mm:ss"
 // @Success 200 {object} entity.ResponseData "desc"
-// @Router /api/v1/verificationcode [GET]
+// @Router /api/v1/common/verificationcode [GET]
 func VerificationCode(c *gin.Context) {
 	tel := c.Query("tel")
-	createtime := c.Query("createtime")
-	res := commonService.VerificationCode(tel,createtime)
-	c.Json(http.StatusOK, res)
+	res := commonService.VerificationCode(tel)
+	c.JSON(http.StatusOK, res)
 }
